# SnakeInC

./: CMakeLists.txt  README.md
src/: game.c  game.h  main.c  snake.c  snake.h
